--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div id="home">
     <h1>Tandem Quiz</h1>
-    <a class="btn" href="/game.html">Play</a>
+    <a class="btn" href="game.html">Play</a>
     <a class="btn" href="/game.html">High Score</a>
     </div>
   </div>
