added javascript to load hardcoded questions testing question choices

--- a/game.html
+++ b/game.html
@@ -6,26 +6,27 @@
   <title>Tandem - Play</title>
   <link rel="stylesheet" href="app.css"/>
   <link rel="stylesheet" href="game.css"/>
+  <script defer src="game.js"></script>
 </head>
 <body>
   <div class="container">
     <div id="game">
-      <h2>What is the answer to this question?</h2>
+      <h2 id="question">What is the answer to this question?</h2>
       <div class="choice-container">
         <p class="choice-type">A</p>
-        <p class="choice-text">Choice</p>
+        <p class="choice-text" data-number="0">Choice</p>
       </div>
       <div class="choice-container">
         <p class="choice-type">B</p>
-        <p class="choice-text">Choice</p>
+        <p class="choice-text" data-number="1">Choice</p>
       </div>
       <div class="choice-container">
         <p class="choice-type">C</p>
-        <p class="choice-text">Choice</p>
+        <p class="choice-text" data-number="2">Choice</p>
       </div>
       <div class="choice-container">
         <p class="choice-type">D</p>
-        <p class="choice-text">Choice</p>
+        <p class="choice-text" data-number="3">Choice</p>
       </div>
     </div>
   </div>
