added score and question counter and tested end page to display results

--- a/game.html
+++ b/game.html
@@ -11,6 +11,16 @@
 <body>
   <div class="container">
     <div id="game">
+      <div id="hud">
+        <div id="hud-item">
+          <p class="hud-title">Question</p>
+          <p class="hud-text" id="questionCounter">1/10</p>
+        </div>
+        <div id="hud-item">
+          <p class="hud-title">Score</p>
+          <p class="hud-text" id="score">0</p>
+        </div>
+      </div>
       <h2 id="question">What is the answer to this question?</h2>
       <div class="choice-container">
         <p class="choice-type">A</p>
